# Yams

./: .bazelrc  .codecov.yml  .gitignore  .jazzy.yaml  .spi.yml  .swiftlint.yml  .travis.yml  BUILD  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Classes.html  Docs.md  Enums.html  Extensions.html  Functions.html  Gemfile  MODULE.bazel  Package.swift  Package@swift-4.2.swift  Package@swift-4.swift  Package@swift-5.swift  Package@swift-6.0.swift  Package@swift-6.swift  Protocols.html  README.md  Structs.html  WORKSPACE  Yams.podspec  azure-pipelines.yml  circle.yml  index.html  make-xcframework.sh  search.json  undocumented.json
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.circleci/: config.yml
.github/workflows/: bazel.yml  cmake.yml  fuzzer.yml  jazzy.yml  nightly.yml  pod_lib_lint.yml  swiftlint.yml  swiftlint_analyze.yml  swiftpm.yml  xcodebuild.yml
Classes/: Anchor.html  BasicAliasDereferencingStrategy.html  Constructor.html  Emitter.html  HashableAliasingStrategy.html  Parser.html  Resolver.html  StrictEncodableAliasingStrategy.html  Tag.html  YAMLDecoder.html  YAMLEncoder.html
Classes/Emitter/: LineBreak.html  Options.html
Classes/Parser/: Encoding.html
Classes/Resolver/: Rule.html
Classes/Tag/: Name.html
Classes/YAMLDecoder/: Options.html
Enums/: Node.html  RedundancyAliasingOutcome.html  YamlError.html
Enums/Node/: Alias.html  Mapping.html  Scalar.html  Sequence.html
Enums/Node/Mapping/: Style.html
Enums/Node/Scalar/: Style.html
Enums/Node/Sequence/: Style.html
Enums/YamlError/: Context.html
Extensions/: Array.html  BinaryInteger.html  Bool.html  Data.html  Date.html  Decimal.html  Decoder.html  Dictionary.html  Double.html  FixedWidthInteger.html  Float.html  Int.html  Int64.html  NSArray.html  NSDictionary.html  NSMutableArray.html  NSMutableDictionary.html  NSMutableSet.html  NSNull.html  NSNumber.html  NSString.html  Optional.html  Set.html  String.html  UInt.html  UInt64.html  URL.html  UUID.html  YAMLDecoder.html
Protocols/: AliasDereferencingStrategy.html  NodeRepresentable.html  RedundancyAliasingStrategy.html  ScalarConstructible.html  ScalarRepresentable.html  SexagesimalConvertible.html  YAMLEncodable.html  YamlAnchorCoding.html  YamlAnchorProviding.html  YamlTagCoding.html  YamlTagProviding.html
Sources/: CMakeLists.txt
Sources/CYaml/: BUILD  CMakeLists.txt
Sources/CYaml/include/: module.modulemap  yaml.h
Sources/CYaml/src/: api.c  emitter.c  loader.c  parser.c  scanner.c
Sources/SwiftDtoa/: SwiftDtoa.c  SwiftDtoa.cpp
Sources/Yams/: AliasDereferencingStrategy.swift  Anchor.swift  BUILD  CMakeLists.txt  Constructor.swift  Decoder.swift  Emitter.swift  Encoder.swift  Mark.swift  Node.Alias.swift  Node.Mapping.swift  Node.Scalar.swift  Node.Sequence.swift  Node.swift  Parser.swift  RedundancyAliasingStrategy.swift  Representer.swift  Resolver.swift  String+Yams.swift  Tag.swift  YamlAnchorProviding.swift  YamlError.swift  YamlTagProviding.swift  Yams.h  Yams.swift  shim.swift
Sources/yams-cli/: main.swift
Sources/yams-fuzzer/: main.swift
Structs/: Mark.html  YamlSequence.html
Tests/: BUILD  CMakeLists.txt  LinuxMain.swift
Tests/YamsTests/: AliasingStrategyTests.swift  AnchorCodingTests.swift  AnchorTolerancesTests.swift  BUILD  CMakeLists.txt  ClassReferenceDecodingTests.swift  ConstructorTests.swift  DecodableWithConfigurationTests.swift  DecoderTests.swift  DoubleEncodingTests.swift  EmitterTests.swift  EncoderTests.swift  MarkTests.swift  NodeDecoderTests.swift  NodeInternalHelpersTests.swift  NodeTests.swift  ParserTests.swift  PerformanceTests.swift  RepresenterTests.swift  ResolverTests.swift  SpecTests.swift  StringTests.swift  TagCodingTests.swift  TagTolerancesTests.swift  TestHelper.swift  TopLevelDecoderTests.swift  YamlErrorTests.swift  YamsTests.swift
Tests/YamsTests/Fixtures/: BUILD
Tests/YamsTests/Fixtures/SourceKitten#289/: debug.yaml
Yams.xcodeproj/: CYaml_Info.plist  Yams.xctestplan  Yams_Info.plist  project.pbxproj
Yams.xcodeproj/GeneratedModuleMap/CYaml/: module.modulemap
Yams.xcodeproj/xcshareddata/xcschemes/: CYaml.xcscheme  Yams.xcscheme  xcschememanagement.plist
bazel/: repositories.bzl
cmake/modules/: CMakeLists.txt  SwiftSupport.cmake  YamsConfig.cmake.in
docsets/: Yams.tgz  Yams.xml
docsets/Yams.docset/Contents/: Info.plist
docsets/Yams.docset/Contents/Resources/: docSet.dsidx
docsets/Yams.docset/Contents/Resources/Documents/: Classes.html  Enums.html  Extensions.html  Functions.html  Protocols.html  Structs.html  index.html  search.json
docsets/Yams.docset/Contents/Resources/Documents/Classes/: Anchor.html  BasicAliasDereferencingStrategy.html  Constructor.html  Emitter.html  HashableAliasingStrategy.html  Parser.html  Resolver.html  StrictEncodableAliasingStrategy.html  Tag.html  YAMLDecoder.html  YAMLEncoder.html
docsets/Yams.docset/Contents/Resources/Documents/Classes/Emitter/: LineBreak.html  Options.html
docsets/Yams.docset/Contents/Resources/Documents/Classes/Parser/: Encoding.html
docsets/Yams.docset/Contents/Resources/Documents/Enums/: Node.html  RedundancyAliasingOutcome.html  YamlError.html
docsets/Yams.docset/Contents/Resources/Documents/Extensions/: Array.html  BinaryInteger.html  Bool.html  Data.html  Date.html  Decimal.html  Decoder.html  Dictionary.html  Double.html  FixedWidthInteger.html  Float.html  Int.html  Int64.html  NSArray.html  NSDictionary.html  NSMutableArray.html  NSMutableSet.html  NSNull.html  NSNumber.html  NSString.html  Optional.html  Set.html  String.html  UInt.html  UInt64.html  URL.html  UUID.html  YAMLDecoder.html
docsets/Yams.docset/Contents/Resources/Documents/Protocols/: AliasDereferencingStrategy.html  NodeRepresentable.html  RedundancyAliasingStrategy.html  ScalarConstructible.html  ScalarRepresentable.html  SexagesimalConvertible.html  YAMLEncodable.html  YamlAnchorCoding.html  YamlAnchorProviding.html  YamlTagCoding.html  YamlTagProviding.html
docsets/Yams.docset/Contents/Resources/Documents/Structs/: Mark.html  YamlSequence.html
tools/: deadcode.sh
(+11 files in other folders)
