module(
    name = "yams",
    version = "5.1.3",
    compatibility_level = 1,
)

bazel_dep(name = "apple_support", version = "1.15.1")
bazel_dep(name = "rules_swift", version = "2.0.0", repo_name = "build_bazel_rules_swift")

bazel_dep(name = "platforms", version = "0.0.9", dev_dependency = True)
bazel_dep(name = "rules_apple", version = "3.6.0", dev_dependency = True)
