module(
    name = "yams",
    version = "5.1.3",
    compatibility_level = 1,
)

bazel_dep(name = "apple_support", version = "1.15.1")
bazel_dep(name = "rules_swift", version = "1.18.0", repo_name = "build_bazel_rules_swift", max_compatibility_level = 2)

bazel_dep(name = "platforms", version = "0.0.9", dev_dependency = True)
bazel_dep(name = "rules_apple", version = "3.5.1", dev_dependency = True)
