module(
    name = "yams",
    version = "6.2.1",
    compatibility_level = 1,
)

bazel_dep(name = "apple_support", version = "1.15.1")
bazel_dep(name = "rules_swift", version = "2.0.0", max_compatibility_level = 3, repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_cc", version = "0.2.15")

bazel_dep(name = "platforms", version = "0.0.9", dev_dependency = True)
bazel_dep(name = "rules_apple", version = "3.7.0", dev_dependency = True)
